--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
 		/>
+		<link rel="stylesheet" href="./css/common.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 
 		<!-- Lodash  -->
@@ -89,6 +90,7 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script>
+		<script defer src="./js/common.js"></script>
 		<script defer src="./js/main.js"></script>
 	</head>
 	<body>
